@@ -72,6 +72,7 @@ $font-color:                    rgb(62, 62, 62) !default;
 
 
 // misc
+$generic-margin-bottom:         1.5rem !default; // pre, dl, figure, table, p, ul, ol, form, blockquote
 $global-radius:                 .25rem !default;
 $darken-hover-percent:          10% !default; // used within hovers in links and buttons
 
