@@ -9,5 +9,5 @@ p,
 ul,
 ol,
 form {
-    margin-bottom: 1.5rem;
+    margin-bottom: $generic-margin-bottom;
 }
