@@ -51,7 +51,7 @@ p {
 }
 
 blockquote {
-    margin: 0 0 1.5rem;
+    margin: 0 0 $generic-margin-bottom;
     padding: 1rem 1.5rem;
     border-left: 3px solid $border-color;
 }
