@@ -5,6 +5,7 @@ Changelog
 ~~~~~~~~~~~~~~~~~~~~~~
 
  * Removed duplicate blockquote margin bottom from core
+ * Added variable $generic-margin-bottom for pre, dl, figure, table, p, ul, ol, form, blockquote
  
 1.3.1 - 14-Jul-2017
 ~~~~~~~~~~~~~~~~~~~
